Autocomplete: Fix y overflow

--- a/src/assets/styles/parts/_autocomplete.sass
+++ b/src/assets/styles/parts/_autocomplete.sass
@@ -1,6 +1,7 @@
 // @TODO/ece Should these be styled liked tags, with color and #? Could looks busy, but no busier than tag browser. Hover state could be chiclet look
 .autocomplete-suggestions
   +menu-dropdown
+  overflow-y: hidden
   margin-left: -8px // same as tag-chiclet padding
 
   .autocomplete-suggestion
